# mitm_project

./: .env  .gitignore  README.md
iOS/: Package.swift  (+3 more)
python/: pyproject.toml
python/Documentation/: APIReference.md  openapi.yaml
python/src/watcher/: __main__.py  config.py  daemon.py  daemon_entry.py  models.py
python/src/watcher/api/: app.py  routes_admin.py  routes_query.py  routes_span.py  routes_span_query.py
python/src/watcher/capture/: addon.py  normalize.py
python/src/watcher/cli/: launchd.py  main.py
python/src/watcher/persistence/: writer.py
python/src/watcher/query/: aggregates.py  engine.py  key_path.py  occurrence.py  questions.py  response.py  scope.py  span_engine.py  span_questions.py  target.py
python/src/watcher/store/: data_store.py  span_manager.py
python/src/wire/: __main__.py  config.py  daemon.py  daemon_entry.py
python/src/wire/api/: app.py  routes_admin.py  routes_query.py  routes_span.py  routes_span_query.py
python/src/wire/capture/: addon.py  normalize.py
python/src/wire/cli/: launchd.py  main.py
python/src/wire/persistence/: writer.py
python/src/wire/query/: engine.py  key_path.py  occurrence.py  questions.py  response.py  scope.py  span_engine.py  span_questions.py  target.py
python/src/wire/store/: data_store.py
python/tests/: conftest.py  test_addon.py  test_api_admin.py  test_api_query.py  test_api_span.py  test_api_span_query.py  test_cli.py  test_data_store.py  test_key_path.py  test_models.py  test_normalize.py  test_persistence.py  test_query_engine.py  test_span_manager.py  test_span_query_engine.py
(+385 files in other folders)
