[project]
name = "wire"
version = "0.1.0"
description = "Web Interception Replay Engine - macOS background service wrapping mitmproxy to capture, organize, and query HTTP traffic"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mitmproxy>=11.0",
    "fastapi>=0.115",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "click>=8.0",
]

[project.scripts]
wire = "wire.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wire"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
